@@ -4,11 +4,14 @@ import io.jsonwebtoken.ExpiredJwtException;
 
 import java.io.IOException;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
@@ -57,9 +60,22 @@ public class TokenAuthenticationFilter extends OncePerRequestFilter {
 
       // 리프레시 토큰이 존재하고 유효한지 검증
       if (refreshToken != null && tokenService.validateRefreshToken(refreshToken)) {
-
         // 새로운 액세스 토큰 생성
-        String newAccessToken = adminService.refreshAccessToken(refreshToken); // 리프레시 토큰으로 액세스 토큰 갱신
+        String newAccessToken = adminService.refreshAccessToken(refreshToken);
+
+        // 새로운 액세스 토큰에서 사용자 ID와 역할 추출
+        String adminId = tokenService.extractEmail(newAccessToken);
+        List<String> roles = tokenService.extractRoles(newAccessToken);
+
+        // SecurityContext에 인증 정보 설정
+        List<GrantedAuthority> authorities = roles.stream()
+            .map(SimpleGrantedAuthority::new)
+            .collect(Collectors.toList());
+
+        UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
+            adminId, null, authorities);
+        authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(req));
+        SecurityContextHolder.getContext().setAuthentication(authentication);
 
         // ResponseDto 형태로 응답 설정
         res.setContentType("application/json");
@@ -70,7 +86,6 @@ public class TokenAuthenticationFilter extends OncePerRequestFilter {
 
         return; // 필터 체인 종료
       } else {
-
         res.setStatus(HttpStatus.UNAUTHORIZED.value());
         res.getWriter().write("Invalid refresh token");
         res.getWriter().flush();
@@ -84,31 +99,30 @@ public class TokenAuthenticationFilter extends OncePerRequestFilter {
 
         if (adminId != null && SecurityContextHolder.getContext().getAuthentication() == null
             && tokenService.validateToken(token, adminId)) {
-          List<GrantedAuthority> authorities = adminRepository.findByAdminId(adminId)
-              .map(user -> user.getRoles().stream()
-                  .map(role -> (GrantedAuthority) () -> role)
-                  .toList())
-              .orElse(List.of());
+          List<String> roles = tokenService.extractRoles(token);
+          List<GrantedAuthority> authorities = roles.stream()
+              .map(SimpleGrantedAuthority::new)
+              .collect(Collectors.toList());
 
-          SecurityContextHolder.getContext().setAuthentication(
-              new UsernamePasswordAuthenticationToken(adminId, null, authorities));
+          UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
+              adminId, null, authorities);
+          authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(req));
+          SecurityContextHolder.getContext().setAuthentication(authentication);
         }
-
       } catch (ExpiredJwtException e) { // 유효기간 만료 에러
         res.setStatus(HttpStatus.UNAUTHORIZED.value());
         res.getWriter().write("Token has expired");
         res.getWriter().flush();
-
         return; // 필터 체인을 종료
       } catch (Exception e) { // 전체 에러
         res.setStatus(HttpStatus.UNAUTHORIZED.value());
         res.getWriter().write("Unauthorized");
         res.getWriter().flush();
-
         return; // 필터 체인을 종료
       }
     }
 
     filterChain.doFilter(req, res); // 필터 체인 계속 진행
   }
+
 }
